tests/parsing/invalid/unknown_call_func_name/bus.fbd
Main bus
	c config; width = foo()
